voting-ns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: voting
  labels:
    app.kubernetes.io/part-of: docker-voting
    app.kubernetes.io/version: "1.0.0"
...
