worker-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app.kubernetes.io/name: worker
    app.kubernetes.io/component: process
    app.kubernetes.io/part-of: docker-voting
    app.kubernetes.io/version: "1.0.0"
spec:
  selector:
    matchLabels:
      app: docker-voting
      run: worker
      tier: backend
      env: production
  replicas: 4
  strategy:
    rollingUpdate:
      maxUnavailable: 20%
      maxSurge: 20%
  template:
    metadata:
      labels:
        app: docker-voting
        run: worker
        tier: backend
        env: production
    spec:
      containers:
      - image: ajagnic/voting_fixed_worker:v1
        name: worker-ctr
        imagePullPolicy: Always
        resources:
          requests:
            memory: 25Mi
            cpu: 50m
          limits:
            memory: 100Mi
            cpu: 150m
...
