postgres-sts-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: docker-voting
spec:
  ports:
  - port: 5432
  selector:
    app: docker-voting
    run: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: docker-voting
spec:
  selector:
    matchLabels:
      app: docker-voting
      run: postgres
  volumeClaimTemplates:
  - metadata:
      name: pg-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
        limits:
          storage: 10Gi
  template:
    metadata:
      labels:
        app: docker-voting
        run: postgres
    spec:
      containers:
      - image: postgres:9.6
        name: postgres-ctr
        resources:
          requests:
            memory: 20Mi
            cpu: 50m
          limits:
            memory: 150Mi
            cpu: 200m
        volumeMounts:
        - name: pg-data
          mountPath: /var/lib/postgresql/data
...
