redis-deploy-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: docker-voting
spec:
  ports:
  - port: 6379
  selector:
    app: docker-voting
    run: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: docker-voting
spec:
  selector:
    matchLabels:
      app: docker-voting
      run: redis
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 20%
      maxSurge: 20%
  template:
    metadata:
      labels:
        app: docker-voting
        run: redis
    spec:
      containers:
      - image: redis:6
        name: redis-ctr
        resources:
          requests:
            memory: 10Mi
            cpu: 30m
          limits:
            memory: 100Mi
            cpu: 150m
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 1
          periodSeconds: 20
          timeoutSeconds: 3
...
