result-deploy-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: docker-voting
spec:
  ports:
  - name: result-http
    port: 80
  selector:
    app: docker-voting
    run: result
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  labels:
    app: docker-voting
spec:
  selector:
    matchLabels:
      app: docker-voting
      run: result
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 20%
      maxSurge: 20%
  template:
    metadata:
      labels:
        app: docker-voting
        run: result
    spec:
      containers:
      - image: ajagnic/voting_fixed_result:0.1
        name: result-ctr
        ports:
        - containerPort: 80
          name: result-ctr-port
        resources:
          requests:
            memory: 25Mi
            cpu: 50m
          limits:
            memory: 150Mi
            cpu: 200m
        readinessProbe:
          tcpSocket:
            port: result-ctr-port
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 2
...
