vote-deploy-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: docker-voting
spec:
  ports:
  - name: vote-http
    port: 80
  selector:
    app: docker-voting
    run: vote
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  labels:
    app: docker-voting
spec:
  selector:
    matchLabels:
      app: docker-voting
      run: vote
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 20%
      maxSurge: 20%
  template:
    metadata:
      labels:
        app: docker-voting
        run: vote
    spec:
      containers:
      - image: dockersamples/examplevotingapp_vote:before
        name: vote-ctr
        ports:
        - containerPort: 80
          name: vote-ctr-port
        resources:
          requests:
            memory: 70Mi
            cpu: 50m
          limits:
            memory: 250Mi
            cpu: 200m
        readinessProbe:
          tcpSocket:
            port: vote-ctr-port
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 2
...
