voting-ing.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: voting
  labels:
    app: docker-voting
spec:
  rules:
  - host: vote.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: vote
          servicePort: vote-http
  - host: result.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: result
          servicePort: result-http
...
